fix error handling

--- a/identity/app/views/reset_password.scala.html
+++ b/identity/app/views/reset_password.scala.html
@@ -4,7 +4,7 @@
 
 @main(page, Switches.all){
 }{
-<form class="form" novalidate action="@idUrlBuilder.buildUrl("/reset-token", idRequest)/@token"  method="post">
+<form class="form" novalidate action="@idUrlBuilder.buildUrl("/reset-password", idRequest)/@token"  method="post">
 
     <p> Please supply your new password </p>
 
