--- a/identity/app/views/reset_password_confirmation.scala.html
+++ b/identity/app/views/reset_password_confirmation.scala.html
@@ -1,6 +1,14 @@
-@(page: MetaData)(implicit request: RequestHeader)
+@(page: MetaData, state : String, emailAddress : String = "" )(implicit request: RequestHeader)
 
 @main(page, Switches.all){
 }{
-<p>Your password has been changed. Click <a href="/signin">here</a> to signin.</p>
+
+@state match {
+        case "reset" => {
+            <p>Your password has been changed. Click <a href="/signin">here</a> to signin.</p>
+        }
+        case "email" => {
+            <p>We have sent an email to @emailAddress</p>
+        }
+}
 }
