Plug data into expandable trails

--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -207,7 +207,7 @@ video {
         padding-left: 0;
         max-width: gs-span(8);
     }
-    .social-wrapper {
+    article .social-wrapper {
         padding: 0 !important;
         margin: 0 !important;
         position: absolute;
