--- a/common/app/assets/stylesheets/module/football/_matches.scss
+++ b/common/app/assets/stylesheets/module/football/_matches.scss
@@ -64,7 +64,7 @@ a.competition-title {
         padding: $baseline*2;
 
         &:active {
-            background: #666;
+            background: $darkMushroom;
             color: #fff !important;
             text-decoration: none;
         }
