--- a/football/app/views/fragments/matchesList.scala.html
+++ b/football/app/views/fragments/matchesList.scala.html
@@ -20,7 +20,7 @@
 	            @* Shows the live blog (if there is one) after the first competition *@
 	            @if(row.isFirst){
 	                @model.blog.map{ blog =>
-	                    <div class="trail">@fragments.trails.thumbnail(blog, row.rowNum)</div>
+	                    @fragments.trails.thumbnail(blog, row.rowNum, element = "div")
 	                }
 	            }
        		</li>
