--- a/football/app/views/fragments/liveMatch.scala.html
+++ b/football/app/views/fragments/liveMatch.scala.html
@@ -4,9 +4,9 @@
 <li class="match live-match">
     <a href="@LinkTo{@MatchUrl(live)}" data-link-name="stats" data-match-id="@live.id">
         <p class="match-desc type-10">
-            <span class="match-home match-team">@live.homeTeam.name</span>
-            <span class="match-result">@live.homeTeam.score-@live.awayTeam.score</span>
-            <span class="match-away match-team">@live.awayTeam.name</span>
+            <span class="match-desc__team match-desc__team--home">@live.homeTeam.name</span>
+            <span class="match-desc__result">@live.homeTeam.score-@live.awayTeam.score</span>
+            <span class="match-desc__team match-desc__team--away">@live.awayTeam.name</span>
         </p>
 
         <p class="match-status type-12">
