--- a/common/app/views/fragments/metaData.scala.html
+++ b/common/app/views/fragments/metaData.scala.html
@@ -2,6 +2,7 @@
 @import common._
 @import model._
 @import conf._
+@import Switches._
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -26,6 +27,12 @@
 
     @item.openGraph.map{ case (key, value) =>
     <meta property="@key" content="@value" />
+    }
+
+    @if(Switches.iPhoneAppSwitch.isSwitchedOn){
+        @defining(if(Edition(request).id == "US") conf.Configuration.ios.usAppId else conf.Configuration.ios.ukAppId) { id =>
+            <meta name="apple-itunes-app" content="app-id=@id, app-argument=@item.id"/>
+        }
     }
 
 @*
