Fixed active state on football cta's

--- a/common/app/assets/stylesheets/module/football/_matches.scss
+++ b/common/app/assets/stylesheets/module/football/_matches.scss
@@ -183,8 +183,7 @@ a.competition-title {
             content: "+ ";
         }
         &:active {
-            background: #666;
-            color: #fff;
+            background: $darkMushroom;
             text-decoration: none;
         }
     }
